--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -33,3 +33,21 @@ body {
 .text-light {
 	color: var(--color-light);
 }
+
+ul {
+	list-style: none;
+}
+
+ul > li .flex {
+	color: var(--color-dark);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2em;
+	margin-top: 1em;
+	text-align: left;
+	background-color: var(--active);
+	padding: 0.8em 0.4em;
+	border-radius: 15px;
+	box-shadow: 1px 10px 20px;
+}
