--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -45,7 +45,7 @@ ul > li .flex {
 	justify-content: center;
 	align-items: center;
 	gap: 2em;
-	margin-top: 1em;
+	margin-top: 1.5em;
 	text-align: left;
 	background-color: var(--active);
 	padding: 0.8em 0.4em;
@@ -60,4 +60,8 @@ ul > li img {
 
 .upcoming {
 	margin-top: 1em;
+}
+
+.name {
+	margin-bottom: 0.4em;
 }
